style: ul.overflow after effect bug

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -486,18 +486,19 @@ ol.overflow {
     margin-bottom: 30px;
   }
 
-  &:after {
-    pointer-events: none;
-    content: "";
-    width: 100%;
-    height: 50px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    opacity: 1;
-    transition: opacity 0.3s ease;
-    background: linear-gradient(transparent 0px, var(--light));
-  }
+  // Bug: after appears on the bottom when mobile
+  // &:after {
+  //   pointer-events: none;
+  //   content: "";
+  //   width: 100%;
+  //   height: 50px;
+  //   position: absolute;
+  //   left: 0;
+  //   bottom: 0;
+  //   opacity: 1;
+  //   transition: opacity 0.3s ease;
+  //   background: linear-gradient(transparent 0px, var(--light));
+  // }
 }
 
 .transclude {
